Adds curl support to main core
Curl was used only by mlogc, as we want to expand ModSecurity to load
external rules/resources it is now a dependency of the core as well.

--- a/apache2/Makefile.am
+++ b/apache2/Makefile.am
@@ -45,11 +45,15 @@ mod_security2_la_CFLAGS = @APR_CFLAGS@ \
 
 
 mod_security2_la_CPPFLAGS = @APR_CPPFLAGS@ \
+    @CURL_CPPFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_CPPFLAGS@ \
     @PCRE_CPPFLAGS@
 
 mod_security2_la_LIBADD = @APR_LDADD@ \
     @APU_LDADD@ \
+    @CURL_LDADD@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDADD@ \
     @LUA_LDADD@ \
     @PCRE_LDADD@ \
@@ -60,6 +64,8 @@ mod_security2_la_LDFLAGS = -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -71,6 +77,8 @@ mod_security2_la_LDFLAGS = -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -82,6 +90,8 @@ mod_security2_la_LDFLAGS = -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -93,6 +103,8 @@ mod_security2_la_LDFLAGS = -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -104,6 +116,8 @@ mod_security2_la_LDFLAGS = -no-undefined -module -avoid-version -R @PCRE_LD_PATH
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -115,6 +129,8 @@ mod_security2_la_LDFLAGS = -no-undefined -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -126,6 +142,8 @@ mod_security2_la_LDFLAGS = -no-undefined -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
@@ -137,6 +155,8 @@ mod_security2_la_LDFLAGS = -no-undefined -module -avoid-version \
     @APR_LDFLAGS@ \
     @APU_LDFLAGS@ \
     @APXS_LDFLAGS@ \
+    @CURL_LDFLAGS@ \
+    @LIBXML2_CFLAGS@ \
     @LIBXML2_LDFLAGS@ \
     @LUA_LDFLAGS@ \
     @PCRE_LDFLAGS@ \
