--- a/iis/Makefile.win
+++ b/iis/Makefile.win
@@ -2,14 +2,15 @@
 #
 # Usage:   NMAKE -f Makefile.win APACHE={httpd installion dir}  PCRE={pcre dir} LIBXML2={LibXML2 dir} [   LUA={Lua dir} ]
 #
-!IF "$(APACHE)" == "" || "$(PCRE)" == "" || "$(LIBXML2)" == ""
-!ERROR NMAKE arguments: APACHE=dir PCRE=dir LIBXML2=dir are required to build mod_security2 for Windows
+!IF "$(APACHE)" == "" || "$(PCRE)" == "" || "$(LIBXML2)" == "" || "$(CURL)" == ""
+!ERROR NMAKE arguments: APACHE=dir PCRE=dir LIBXML2=dir CURL=dir are required to build mod_security2 for Windows
 !ENDIF
 
 # Linking libraries
 LIBS = $(APACHE)\lib\libapr-1.lib \
        $(APACHE)\lib\libaprutil-1.lib \
        $(PCRE)\pcre.lib \
+       $(CURL)\lib\libcurl_imp.lib \
        $(LIBXML2)\win32\bin.msvc\libxml2.lib \
        "kernel32.lib" "user32.lib" "gdi32.lib" "winspool.lib" "comdlg32.lib" "advapi32.lib" "shell32.lib" "ole32.lib" \
        "oleaut32.lib" "uuid.lib" "odbc32.lib" "odbccp32.lib" "ws2_32.lib" \
@@ -30,6 +31,7 @@ DLL = ModSecurityIIS.dll
 INCLUDES = -I. -I.. \
            -I$(PCRE)\include -I$(PCRE) \
            -I$(LIBXML2)\include \
+           -I$(CURL)\include -I$(CURL) \
            -I$(APACHE)\include \
            -I..\apache2 \
            -I..\standalone
