--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -5,6 +5,7 @@ msc_test_SOURCES = msc_test.c \
     $(top_srcdir)/apache2/libinjection/libinjection_sqli.c \
     $(top_srcdir)/apache2/libinjection/libinjection_xss.c \
     $(top_srcdir)/apache2/modsecurity.c \
+    $(top_srcdir)/apache2/msc_status_engine.c \
     $(top_srcdir)/apache2/msc_crypt.c \
     $(top_srcdir)/apache2/msc_geo.c \
     $(top_srcdir)/apache2/msc_gsb.c \
